--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: mlops-app
-        image: 
+        image: dataguru97/gitops-project:latest
         ports:
         - containerPort: 5000
